--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Svelte + Vite App</title>
+    <title>Dusty Domains - +codes</title>
     <style>
         body {
     background-color: black;
   }
+@import url('https://fonts.googleapis.com/css2?family=Catamaran&family=IBM+Plex+Sans:wght@300&display=swap');
     </style>
   </head>
   <body>
